# onnx-extractor

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: onnx.proto
src/: error.rs  external_data.rs  lib.rs  model.rs  operation.rs  proto_adapter.rs  tensor.rs  types.rs
tests/: integration.rs
