[package]
name = "onnx-extractor"
version = "0.0.1"
edition = "2024"
authors = ["PieInOblivion"]
license = "MIT"
description = "Lightweight ONNX model parser for extracting tensor shapes, operations, and data"
repository = "https://github.com/PieInOblivion/onnx-extract"
keywords = ["onnx", "machine-learning", "tensor", "parser", "model"]
categories = ["parsing", "science"]
readme = "README.md"

[dependencies]
